--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -45,6 +45,7 @@
     --fs-m: 13px;
     --fs-l: 20px;
     --fs-xl: 30px;
+    --fs-xxl: 40px;
   
     --radius: 5px;
     --initial-border: 1px solid transparent;
