--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,6 +16,7 @@ body {
   font-family: var(--font);
   background-color: var(--background-primary-color);
   color: var(--font-color);
+  font-size: var(--fs-m);
 }
 
 a {
