TasksView, TasksList and TaskItem components created

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -65,10 +65,5 @@ p {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background-color: var(--background-secondary-color);
 }
