--- a/src/styles/views/taskDetails.css
+++ b/src/styles/views/taskDetails.css
@@ -1,6 +1,9 @@
+/* TaskDetailsView Styles */
+
 .desktop {
     display: none;
 }
+
 .task-details-container {
     width: 100%;
     padding: 20px 10px;
